# JavaUWP

./: .gitignore  README.md  build.ps1  download_assets.ps1  download_libs.ps1  generate_assets.py  patch_fabric.ps1  xbox_security.properties
.github/workflows/: mouse-relay-nightly.yml  nightly.yml
MC.Xbox/: App.cpp  Package.appxmanifest  launch.ps1  launch_auth.example.json
compat_mod/: build_compat_mod.ps1
compat_mod/src/main/java/banditvault/xboxcompat/: BanditMouseCursorOverlay.java  XboxCompatLog.java
compat_mod/src/main/resources/: banditvault-xbox-compat.mixins.json
controller_mod/fabric/: build_fabric_controller_mod.ps1
controller_mod/fabric/src/variants/1.20.1/resources/: banditvault-fabric-controller.mixins.json
controller_mod/fabric/src/variants/1.21.1/resources/: banditvault-fabric-controller.mixins.json
controller_mod/forge/src/main/resources/: banditvault-forge-controller.mixins.json
docs/: BUILDING.md  PATCHING.md
glfw_shim/: build_glfw.ps1  glfw_uwp.cpp
scripts/: config.ps1  generate-assets.py  prepare-ci-cache.ps1
tools/mouse-relay/: CMakeLists.txt  README.md
tools/mouse-relay/android/: build.gradle  gradle.properties  settings.gradle
tools/mouse-relay/android/app/: build.gradle
tools/mouse-relay/android/app/src/main/: AndroidManifest.xml
tools/mouse-relay/android/app/src/main/java/dev/bandit/mouserelay/: MainActivity.java
tools/mouse-relay/android/app/src/main/res/values/: strings.xml  styles.xml
tools/mouse-relay/scripts/: build-windows.ps1  package-windows.ps1
tools/mouse-relay/src/: main.cpp
(+42 files in other folders)
